; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/mediatek/extr_phy-mtk-ufs.c_ufs_mtk_phy_power_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/mediatek/extr_phy-mtk-ufs.c_ufs_mtk_phy_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.ufs_mtk_phy = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @ufs_mtk_phy_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ufs_mtk_phy_power_off(%struct.phy* %0) #0 {
  %2 = alloca %struct.phy*, align 8
  %3 = alloca %struct.ufs_mtk_phy*, align 8
  store %struct.phy* %0, %struct.phy** %2, align 8
  %4 = load %struct.phy*, %struct.phy** %2, align 8
  %5 = call %struct.ufs_mtk_phy* @get_ufs_mtk_phy(%struct.phy* %4)
  store %struct.ufs_mtk_phy* %5, %struct.ufs_mtk_phy** %3, align 8
  %6 = load %struct.ufs_mtk_phy*, %struct.ufs_mtk_phy** %3, align 8
  %7 = call i32 @ufs_mtk_phy_set_deep_hibern(%struct.ufs_mtk_phy* %6)
  %8 = load %struct.ufs_mtk_phy*, %struct.ufs_mtk_phy** %3, align 8
  %9 = getelementptr inbounds %struct.ufs_mtk_phy, %struct.ufs_mtk_phy* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @clk_disable_unprepare(i32 %10)
  %12 = load %struct.ufs_mtk_phy*, %struct.ufs_mtk_phy** %3, align 8
  %13 = getelementptr inbounds %struct.ufs_mtk_phy, %struct.ufs_mtk_phy* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @clk_disable_unprepare(i32 %14)
  ret i32 0
}

declare dso_local %struct.ufs_mtk_phy* @get_ufs_mtk_phy(%struct.phy*) #1

declare dso_local i32 @ufs_mtk_phy_set_deep_hibern(%struct.ufs_mtk_phy*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
